# RustySongs

./: README.md
rusty-songs/: .gitignore  Cargo.toml
rusty-songs/src/: lib.rs  main.rs
rusty-songs/src/models/: mod.rs  song.rs  video.rs
rusty-songs/src/services/youtube/: mod.rs  youtube_client.rs  youtube_request_builder.rs  youtube_service.rs
rusty-songs/src/tui/: app.rs
rusty-songs/src/tui/ui/: builder.rs  color_theme.rs  mod.rs  notification.rs  playback.rs  playlist.rs  queue.rs  search_bar.rs
rusty-songs/src/utils/: format.rs  logger.rs  mod.rs  video_tools.rs
