[package]
name = "rusty_songs"
authors = ["niels <niels.i.savvides@gmail.com>"]
license = "MIT"
description = "Music player in terminal written in Rust for low resource consumption."
repository = "https://github.com/nsavvide/RustySongs"
homepage = "https://github.com/nsavvide/RustySongs"
keywords = ["terminal", "tui", "music", "youtube"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "multimedia::audio",
]
readme = "./README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tui = "0.19"
crossterm = "0.28.1"
dotenv = "0.15" 
symphonia = { version = "0.5", features = ["mp3"] }
